apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
  labels:
    app: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      # copy over the configmap to the volume
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.66
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
            - name: http
              containerPort: 853
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/conf
              subPath: conf
            - name: adguard-data
              mountPath: /opt/adguardhome/work
              subPath: work
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-data
        - name: initial-config
          configMap:
            name: adguard-config
