apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
  labels:
    app: adguard
spec:
  selector:
    app: adguard
  type: NodePort # makes the service reachable on node IPs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80 # this is a bit tricky because by default the adguard container will listen on 3000 during the wizard, and we want to expose 80 the rest of the time
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
      nodePort: 3053
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
      nodePort: 3053
