apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  labels:
    app: adguard
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: adguard.home.prowe.ca
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: adguard.home.prowe.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 80
  tls:
    - hosts:
        - adguard.home.prowe.ca
      secretName: adguard-tls
